<resources>
    <string name="app_name">Hackathon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--Sign in-->
    <string name="title">人民陳情系統Beta Man</string>
    <string name="email">您的身分證字號</string>
    <string name="password">您的密碼</string>
    <string name="sign_in">登入</string>
    <string name="loading">登入中...</string>
    <string name="success">登入成功</string>
    <string name="dialog_error_title">登入失敗</string>
    <string name="dialog_sign_in_error_message">您的帳號密碼不正確，請確認後重試!</string>
    <string name="dialog_network_error_message">請確認您的網路連線</string>
    <string name="emaila_format_error">Email format is incorrect！</string>
    <string name="phone_query">重要單位\n電話查詢</string>
    <string name="question_query">常見問答</string>
    <string name="about_query">使用說明</string>


    <!--Navigation_-->
    <string name="navigation_case_query">案件查詢</string>
    <string name="navigation_telephone_query">電話查詢</string>
    <string name="navigation_normal_qa">常見問答</string>
    <string name="navigation_introduction">使用說明</string>

    <!--Main-->
    <string name="main_title">我要陳情!(包大人～恕我攔轎)</string>
    <string name="main_switch_type">類型檢視</string>
    <string name="main_switch_map">地圖檢視</string>
    <string name="main_search_btn">我的陳情案件查詢!</string>
    <string name="main_hint_type_key">關鍵字搜尋</string>
    <string name="main_hint_map_key">地點搜尋</string>

    <!--Type-->
    <string name="type_road">道路維護</string>
    <string name="type_environment">環保問題</string>
    <string name="type_tree">路燈及路樹</string>
    <string name="type_park">公園設施</string>
    <string name="type_other">其他陳情</string>
    <string name="type_question">問題諮詢及分類</string>


    <!--Map-->

    <string-array name="map_type_spinner">
        <item>道路維護</item>
        <item>環保問題</item>
        <item>路燈及路樹</item>
        <item>公園設施</item>
        <item>其他陳情</item>
    </string-array>

    <string name="map_week">週內</string>

    <!-- Filing-->
    <string name="filing_title">我的陳情案件查詢</string>
    <string name="filing_num">案件編號</string>
    <string name="filing_password">案件密碼</string>
    <string name="filing_btn">查詢</string>
    <string name="filing_info_one">1.受理您的來信後，會寄送受理通知函到您的電子信箱，受理通知函內容包括受理案件編號及安全密碼， 您可於此頁面輸入受理案件編號、安全密碼以及來信時填寫的電子信箱，即可查詢案件處理情形。</string>
    <string name="filing_info_two">2.如果您已加入網路市民，只要網路市民登入成功，即可立即查詢您所有的來信紀錄、案件處理情形 及回復內容，毋需再每個案件個別輸入受理案件編號、安全密碼。心動不如馬上行動， 立即加入網路市民。</string>

    <!-- Report -->
    <string name="report_time">*通報時間</string>
    <string name="report_person">*陳情人</string>
    <string name="report_phone">*電話</string>
    <string name="report_email">*信箱</string>
    <string name="report_category">*陳情類別</string>
    <string name="report_question">問題描述</string>
    <string name="report_address">*陳情地點</string>
    <string name="report_address_map">以地圖方式標記</string>
    <string name="report_picture">新增照片</string>
    <string name="report_send">案件送出</string>
    <string name="report_note">(*為必填項目)</string>

    <string name="report_key">陳情</string>

    <string name="report_road_sub">路平問題</string>
    <string-array name="report_road_sub_item">
        <item>坑洞</item>
        <item>龜裂</item>
        <item>路面不平</item>
        <item>其他</item>
    </string-array>

    <string name="report_road_sub_two">人孔蓋或水溝</string>
    <string-array name="report_road_sub_two_item">
        <item>遺失</item>
        <item>損壞</item>
        <item>水溝不通</item>
        <item>其他</item>
    </string-array>

</resources>
