<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_case_query"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_case_query" />

        <item
            android:id="@+id/nav_telephone_query"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_telephone_query" />

        <item
            android:id="@+id/nav_normal_qa"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_normal_qa" />

        <item
            android:id="@+id/nav_introduction"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_introduction" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
