<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fantasy1022.hackathon.presentation.filing.FilingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/filingLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/numInputLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/numEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filing_num"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/large_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/numInputLay"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filing_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/large_text_size" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/filingLay"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/filing_btn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:pb_colorComplete="@color/green_complete"
        app:pb_colorNormal="@color/colorAccent"
        app:pb_colorPressed="@color/blue_pressed"
        app:pb_colorProgress="@color/purple_progress"
        app:pb_textComplete="@string/success"
        app:pb_textProgress="@string/loading" />

    <TextView
        android:id="@+id/info_one_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchBtn"
        android:layout_margin="32dp"
        android:text="@string/filing_info_one" />

    <TextView
        android:id="@+id/info_two_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_one_txt"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/filing_info_two" />
</RelativeLayout>
