<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fantasy1022.hackathon.presentation.type.TypeFragment">


    <RelativeLayout
        android:id="@+id/type_road_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="33%"
        app:layout_widthPercent="50%">

        <Button
            android:id="@+id/type_road_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/type_road" />

        <TextView
            android:id="@+id/type_road_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_road_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/type_road"
            android:textColor="@android:color/black" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/type_environment_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        app:layout_heightPercent="33%"
        app:layout_widthPercent="50%">

        <Button
            android:id="@+id/type_environment_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/type_environment" />

        <TextView
            android:id="@+id/type_environment_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_environment_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/type_environment"
            android:textColor="@android:color/black" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/type_tree_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        app:layout_heightPercent="33%"
        app:layout_widthPercent="50%">

        <Button
            android:id="@+id/type_tree_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/type_tree" />

        <TextView
            android:id="@+id/type_tree_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_tree_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/type_tree"
            android:textColor="@android:color/black" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/type_park_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|end"
        app:layout_heightPercent="33%"
        app:layout_widthPercent="50%">

        <Button
            android:id="@+id/type_park_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/type_park" />

        <TextView
            android:id="@+id/type_park_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_park_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/type_park"
            android:textColor="@android:color/black" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/type_other_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        app:layout_heightPercent="33%"
        app:layout_widthPercent="50%">

        <Button
            android:id="@+id/type_other_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/type_other" />

        <TextView
            android:id="@+id/type_other_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_other_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/type_other"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/type_question_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="bottom|right"
        app:layout_heightPercent="33%"
        app:layout_widthPercent="50%">

        <Button
            android:id="@+id/type_question_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/type_question" />

        <TextView
            android:id="@+id/type_question_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_question_btn"
            android:layout_centerHorizontal="true"
            android:text="@string/type_question"
            android:textColor="@android:color/black" />
    </RelativeLayout>


</android.support.percent.PercentFrameLayout>
